# ComputerGraphics-Project

./: CMakeLists.txt
cloudWorld/: box.frag  box.vert  cloudWorld.cpp
cloudWorld/include/: bot.h
cloudWorld/render/: bot.frag  bot.vert  box.frag  box.vert  skybox.frag  skybox.vert
cloudWorld/src/: bot.cpp
